[package]
name = "stumpless-sys"
description = "Bindings for the Stumpless logging library."
version = "0.0.0"
authors = ["Joel Anderson <joelanderson333@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.3", features = ["cargo"] }
libc = "0.2.117"

[features]
journald = []
network = []
socket = []
wel = []

[build-dependencies]
bindgen = "0.59.2"
cmake = "=0.1.45"
